# capstone

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
experiments/: .gitignore  __init__.py  analyze_experiments.py  build_rag.py  compute_consistency_stats.py  compute_interactions.py  compute_statistics.py  meta-prompts.md  pyproject.toml  run_experiment.py  run_experiments.sh
experiments/backtests/: __init__.py  complex.py  medium.py  simple.py
experiments/backtests/shared/: __init__.py  data.py  metrics.py  result.py
experiments/common/: __init__.py  types.py  utils.py
experiments/prompts/: __init__.py  c0_control.py  c1_schema.py  c2_docs.py  c3_tdd.py  c4_schema_docs.py  c5_schema_tdd.py  c6_docs_tdd.py  c7_all.py
experiments/prompts/shared/: __init__.py  api_citation.py  invariant_tests.py  schemas.py  signatures.py  strategy_base.py  strategy_tests.py  validation.py  vas.py
experiments/reference-implementation/: complex.py  simple.py
experiments/results/c0_complex_0/: code.py  results.json
experiments/results/c0_complex_1/: code.py  results.json
experiments/results/c0_complex_2/: code.py  results.json
experiments/results/c0_complex_3/: code.py  results.json
experiments/results/c0_complex_4/: code.py  results.json
experiments/results/c0_complex_5/: code.py  results.json
experiments/results/c0_medium_0/: code.py  results.json
experiments/results/c0_medium_1/: code.py  results.json
experiments/results/c0_medium_2/: code.py  results.json
experiments/results/c0_medium_3/: code.py  results.json
experiments/results/c0_medium_4/: code.py  results.json
experiments/results/c0_medium_5/: code.py  results.json
experiments/results/c0_simple_0/: code.py  results.json
experiments/results/c0_simple_1/: code.py  results.json
experiments/results/c0_simple_2/: code.py  results.json
experiments/results/c0_simple_3/: code.py  results.json
experiments/results/c0_simple_4/: code.py  results.json
experiments/results/c0_simple_5/: code.py  results.json
experiments/results/c1_complex_1/: code.py
experiments/results/c1_complex_2/: code.py
experiments/results/c1_complex_3/: code.py
experiments/results/c1_complex_4/: code.py
experiments/results/c1_complex_5/: code.py
experiments/results/c1_medium_1/: code.py  results.json
experiments/results/c1_medium_2/: code.py  results.json
experiments/results/c1_medium_3/: code.py  results.json
experiments/results/c1_medium_4/: code.py  results.json
experiments/results/c1_medium_5/: code.py  results.json
experiments/results/c1_simple_1/: code.py  results.json
experiments/results/c1_simple_2/: code.py  results.json
experiments/results/c1_simple_3/: code.py  results.json
experiments/results/c1_simple_4/: code.py  results.json
experiments/results/c1_simple_5/: code.py  results.json
experiments/results/c2_complex_1/: code.py  results.json
experiments/results/c2_complex_2/: code.py  results.json
experiments/results/c2_complex_3/: code.py  results.json
experiments/results/c2_complex_4/: code.py
experiments/results/c2_complex_5/: code.py  results.json
experiments/results/c2_medium_1/: code.py  results.json
experiments/results/c2_medium_2/: code.py  results.json
experiments/results/c2_medium_3/: code.py  (+1 more)
experiments/results_10_gpt5mini/: semantic_analysis_complex_20turn.md  semantic_analysis_medium_20turn.md  semantic_analysis_simple_20turn.md  semantic_analysis_summary.md
experiments/verify/: __init__.py  verify_c0.py  verify_c1.py  verify_c2.py  verify_c3.py  verify_c4.py  verify_c5.py  verify_c6.py  verify_c7.py
(+633 files in other folders)
